# ActivityMonitor

./: CMakeLists.txt  LICENSE  README.md
src/ActivityMonitor/: ActivityMonitorApp.cpp  ActivityMonitorApp.h  CMakeLists.txt  MainFrame.cpp  MainFrame.h  main.cpp
src/ActivityMonitorLib/: ActiveProcessChangeNotifierWin.h  StatisticUnit.h  StatisticsHandler.h  TrackingProcessInfo.h
src/GeneralUtils/: CMakeLists.txt  CompileTime.h  Guard.h  ScopeExit.h  StackBuffer.h  TimeDuration.h  Timer.h
src/WindowsUtils/: ActiveProcessHelper.h  CMakeLists.txt  HandleGuard.h  ProcessWrapper.h  TokenWrapper.h
